--- a/content/post/2017-05-12-comparison-of-nba-draft-classes-immediate-impact.Rmd
+++ b/content/post/2017-05-12-comparison-of-nba-draft-classes-immediate-impact.Rmd
@@ -22,13 +22,15 @@ linktitle: ''
 knitr::opts_chunk$set(message=FALSE, warnings=FALSE)
 ```
 
-On a semi-recent episode of [The Lowe Post](add_url.com), Jeff Van Gundy asked- "Is this the worst [rookie class] as far as initial contribution? Has there ever been less contribution to winning?" 
+On AAA semi-recent episode of [The Lowe Post](http://www.espn.com/espnradio/play?id=19151345), Jeff Van Gundy asked- "Is this the worst [rookie class] as far as initial contribution? Has there ever been less contribution to winning?" [^1] 
+
+[^1]: Around the 42 minute mark. 
 
 Curious to know the answer, I looked at each draft class since 1989 (when the draft was changed to two rounds) and their performance in that year's season. To be clear, this is only looking at immediate contribution, and not long-term success. Only those who played the same year they were drafted are being considered- so players like Joel Embiid, who did not play their first year, are not in the data.
 
 ## The Data
 
-The data are all scraped from [basketball-reference.com](www.basketball-reference.com) using the the `rvest` [package](https://cran.r-project.org/web/packages/rvest/). The function below pulls the necessary data for any one year. The first thing to grab is the the year's [draft class](http://www.basketball-reference.com/draft/NBA_2016.html). The only necessary information from this is the link to each player's page. This link is used as a unique identifier for the player, allowing us to easily merge with the other data. The other data necessary are found in the [advanced season statistics page](http://www.basketball-reference.com/leagues/NBA_2017_advanced.html). For the purposes of this analysis, the only stats needed are minutes played, and [win shares](http://www.basketball-reference.com/about/ws.html) as these will work for measuring contribution to winning. The total number of minutes played, and total win shares by all players are computed as well to make it possible to compare across seasons. I then used the function to grab data from 1989 - 2016. The resulting data frame contains 1,204 observations, and can be found [here](https://github.com/mdgbeck/data).
+The data are all from [basketball-reference.com](www.basketball-reference.com) scraped using the the `rvest` [package](https://cran.r-project.org/web/packages/rvest/). The function below pulls the necessary data for any one year. The first thing to grab is the year's [draft class](http://www.basketball-reference.com/draft/NBA_2016.html). The only necessary information from this is the link to each player's page. This link is used as a unique identifier for the player, allowing us to easily merge with the other data necessary, which are found on the [advanced season statistics page](http://www.basketball-reference.com/leagues/NBA_2017_advanced.html). For the purpose of this analysis, the only stats needed are minutes played, and [win shares](http://www.basketball-reference.com/about/ws.html) as these will work for measuring contribution to winning. The total number of minutes played, and total win shares by all players are computed as well to make it possible to compare across seasons. I then used the function to grab data from 1989 - 2016. The resulting data frame contains 1,204 observations, and can be found [here](https://github.com/mdgbeck/data).
 
 ```{r, eval=FALSE}
 library(rvest)
@@ -80,6 +82,7 @@ get_draft_data <- function(year){
   
 }
 
+# pull data 1989 - 2016
 nba <- lapply(1989:2016, get_draft_data) %>% 
   bind_rows()
 
@@ -145,4 +148,7 @@ ggplot(by_year, aes(Year, Perc_WS)) +
 
 Again, we see that the 2014 draft class had the lowest percentage- less than 2\% of all win shares came from rookies that year. Similarly, the 2016 had the second lowest at 2.10\%. 
 
-As we might expect, the percent of total win shares and percent of total minutes each year are highly correlated with each other (r = 0.87). I do not think this is a problem, as the question asked was about initial contribution not the talent of the rookies. From the graphics we begin to understand the answer to Van Gundy's question, that while this years draft class may not have been the absolute worst, they were certainly among the lowest contributing rookie class in history.  
+As we might expect, the percent of total win shares and percent of total minutes each year are highly correlated with each other (*r* = 0.87). I do not think this is a problem, as the question asked was about initial contribution not the talent of the rookies. Whether we consider minutes played or win shares a better measure of impact, both suggest that the 2014 draft may have been the least immediately impactful. 
+
+To answer Van Gundy's question, while this years draft class may not have been the absolute worst, they were certainly among the lowest contributing rookie class in history.
+
