add post, change code format

--- a/content/post/2017-05-12-comparison-of-nba-draft-classes-immediate-impact.Rmd
+++ b/content/post/2017-05-12-comparison-of-nba-draft-classes-immediate-impact.Rmd
@@ -43,6 +43,7 @@ get_draft_data <- function(year){
   
   draft_site <- read_html(draft_url)
   
+  # pull the links to the players' pages from draft table
   draft <- draft_site %>% 
     html_nodes(".left:nth-child(4) a") %>% 
     html_attr("href") %>% 
@@ -55,14 +56,14 @@ get_draft_data <- function(year){
   
   stats_site <- read_html(stats_url)
   
-  # get the links to the players' page for merging
+  # get the links to the players' pages from stats table
   stats_links <- stats_site %>% 
     html_nodes("th+ .left a") %>% 
     html_attr("href") %>% 
     data_frame() %>% 
     select(Link = 1)
   
-  # get the stats
+  # get the stats table
   stats <- stats_site %>% 
     html_node("table") %>% 
     html_table(header=TRUE)
